[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Andrii Puziuk <frayandy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
library = { git = "git@github.com:frayandy/library.git",  tag="0.0.1"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
